# ftdi-tools-rs

./: Cargo.toml
examples/: i2c_as5600.rs  i2c_lm75.rs  spibus_flash.rs  ssd1680.rs
src/: ftdaye.rs  i2c.rs  mpsse.rs
