[package]
name = "ftdi-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield-struct = "0.11.0"
eh1 = { package = "embedded-hal", version = "1" }
futures-lite = "2.6.0"
log = "0.4.27"
nusb = "0.1.14"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
as5600 = "0.8.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
env_logger = "0.11.8"
itertools = "0.14.0"
lm75 = "1.0.0"
mipidsi = "0.9.0"
sht31 = "0.3.2"
spi-flash = "0.3.0"
ssd1680 = { git = "https://github.com/fan2nd/ssd1680" }
